--- a/package.json
+++ b/package.json
@@ -13,6 +13,29 @@
     "@angular/platform-browser": "~19.0.0",
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mongoose": "^11.0.0",
+    "@nestjs/passport": "^11.0.4",
+    "@nestjs/platform-express": "^10.0.2",
+    "@ngrx/effects": "^19.0.0",
+    "@ngrx/entity": "^19.0.0",
+    "@ngrx/store": "^19.0.0",
+    "@ngrx/store-devtools": "^19.0.0",
+    "@nx/nest": "^20.3.2",
+    "@types/bcryptjs": "^2.4.6",
+    "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "dotenv": "^16.4.7",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -24,12 +47,16 @@
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/angular": "20.3.2",
     "@nx/eslint": "20.3.2",
-    "@nx/eslint-plugin": "20.3.2",
+    "@nx/eslint-plugin": "^20.3.2",
     "@nx/jest": "20.3.2",
     "@nx/js": "20.3.2",
+    "@nx/node": "20.3.2",
     "@nx/web": "20.3.2",
+    "@nx/webpack": "20.3.2",
     "@nx/workspace": "20.3.2",
     "@schematics/angular": "~19.0.0",
     "@swc-node/register": "~1.9.1",
@@ -39,17 +66,22 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.13.0",
     "angular-eslint": "^19.0.2",
-    "eslint": "^9.8.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "nx": "20.3.2",
+    "postcss": "^8.5.1",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.13.0"
+    "typescript-eslint": "^8.13.0",
+    "webpack-cli": "^5.1.4"
   }
 }
