--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
+    "ngrx-store-localstorage": "^19.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
@@ -63,6 +65,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.13.0",
     "angular-eslint": "^19.0.2",
